<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.portfoliodetails.PortfolioDetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPortfolioDetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewBackground"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/background_description"
                android:scaleType="centerCrop"
                android:src="@drawable/background_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewFilter"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/gradient_background"
                app:layout_constraintBottom_toBottomOf="@+id/textViewTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewTitle" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:padding="16dp"
                android:text="@string/do_your_login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/imageViewBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutBalance"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                app:layout_constraintWidth_percent="1">

                <TextView
                    android:id="@+id/textViewBalanceDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:elevation="1dp"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:text="@string/balance_description"
                    android:textAlignment="textStart"
                    android:textColor="@color/green"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/textViewGoalDescription"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewBalance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:elevation="1dp"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/money_sample"
                    android:textAlignment="textStart"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/textViewGoal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewBalanceDescription" />

                <TextView
                    android:id="@+id/textViewGoalDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:elevation="1dp"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:text="@string/goal_description"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textViewBalanceDescription"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewGoal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:elevation="1dp"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/money_sample"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textViewBalance"
                    app:layout_constraintTop_toBottomOf="@+id/textViewBalanceDescription" />

                <com.mikhaellopez.circularprogressbar.CircularProgressBar
                    android:id="@+id/progressBarGoalPercentage"
                    android:layout_width="256dp"
                    android:layout_height="256dp"
                    android:layout_margin="16dp"
                    app:cpb_background_progressbar_color="@color/pink_200"
                    app:cpb_background_progressbar_width="16dp"
                    app:cpb_progress="75"
                    app:cpb_progress_direction="to_right"
                    app:cpb_progressbar_color="@color/pink_500"
                    app:cpb_progressbar_width="16dp"
                    app:cpb_round_border="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewCurrentDateDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:elevation="1dp"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:text="@string/current_date_description"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textViewCurrentDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:elevation="1dp"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:text="@string/date_sample"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/textViewGoalDateDescription"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textViewPercentage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:elevation="1dp"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:text="@string/percentage_sample"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewGoalDateDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:elevation="1dp"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:text="@string/goal_date_description"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textViewGoalDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:elevation="1dp"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:text="@string/date_sample"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/textViewGoalDateDescription"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>